# python-etl-duckdb

./: .gitignore  README.md  app.py  pipeline.py  pyproject.toml
uploads_etl/: vendas_diaria.csv
